# LogicCastle

./: .eslintrc.js  .gitignore  .nojekyll  .prettierrc.cjs  AI_STRATEGY_INSIGHTS.md  ANALYSIS_PHASE1.md  ARCHITECTURE.md  BOT-MATRIX-ANALYSIS.md  CI-CD-ANALYSIS-REPORT.md  CI-CD-FIX-SUMMARY.md  CLAUDE.md  GEMINI.md  NAMING_STANDARDS.md  PERFORMANCE-VALIDATION-REPORT.md  PHASE-1-COMPLETION-REPORT.md  PHASE2.4_TEST_RESULTS.md  PHASE2_PLAN.md  PLAN.md  PUPPETEER_VALIDATION_RESULTS.md  PUPPETEER_VERIFICATION_PLAN.md  README.md  REAL-BOT-TESTING-INSTRUCTIONS.md  REFACTORING-PHASE-1-COMPLETE.md  SPRINT1-CSS-MIGRATION-REPORT.md  STRATEGIC-BOT-ANALYSIS.md  STRATEGIC-BOT-FIX-SUMMARY.md  TODO.md  ULTRATHINK_REMAINING_PHASES.md  _headers  ai-debug-logs-2025-07-07T16-13-14-543Z.json  bot-comparison-matrix.js  bot-matrix-runner.js  check-diagonal-pattern.js  ci-validation.js  compare-bot-performance.js  context-debug.js  debug-connect4.cjs  debug-diagonal.html  debug-monte-carlo-ui.html  debug-threat-position.js  (+45 more)
GEMINI_REPORTS/: 20250702-15:00:00_LogicCastle_Rust_Structure.md  20250702-15:30:00_Refactoring_Plan_LogicCastle.md  20250702-16:00:00_L-Game_Implementation_Plan.md  20250702-16:30:00_DotsAndBoxes_Implementation_Plan.md  20250702-17:00:00_Hex_Implementation_Plan.md  20250702-17:15:00_ShannonSwitchingGame_Implementation_Plan.md  20250703-10:30:00-CLAUDE.md  (+61 more)
game_engine/: ALTERNATIVE_IMPLEMENTATION_ANALYSIS.md  Cargo.toml  Cargo_alternative.toml  PHASE1_AI_ENHANCEMENTS.md  PHASE1_ALTERNATIVE_SUMMARY.md
game_engine/examples/: alternative_demo.rs
game_engine/game_engine/pkg/: game_engine.d.ts  game_engine_bg.wasm.d.ts
game_engine/pkg/: .gitignore  game_engine.d.ts  game_engine.js  game_engine_bg.wasm  game_engine_bg.wasm.d.ts  package.json
game_engine/src/: lib.rs  lib_alternative.rs
game_engine/src/ai/: advanced_gomoku_scenarios.rs  categorized_gemini_tests.rs  connect4_ai.rs  connect4_multi_test_example.rs  gemini_gomoku_multi_tests.rs  gemini_gomoku_tests.rs  gemini_test_cases.rs  gomoku_ai.rs  gomoku_test_cases.rs  gomoku_test_data.rs  mod.rs  pattern_evaluator.rs  quick_gemini_test.rs  test_data.rs
game_engine/src/data/: bit_packed_board.rs  mod.rs
game_engine/src/games/: connect4.rs  gomoku.rs  lgame.rs  mod.rs  trio.rs
game_engine/src/geometry/: hex_grid.rs  mod.rs  quadratic_grid.rs  tests.rs
game_engine/tests/: implementation_comparison.rs
games/connect4/rust_logic/: Cargo.toml
(+531 files in other folders)
