[package]
name = "game_engine"
version = "0.1.0"
edition = "2024"
description = "Universal game engine for Connect4, Gobang, and Trio"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }

# WASM-specific debugging and optimization
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

# Browser API access for debugging
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
], optional = true }

js-sys = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook", "wee_alloc", "web_sys", "js_sys"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
web_sys = ["dep:web-sys"]  
js_sys = ["dep:js-sys"]

# Profile optimizations for WASM
[profile.release]
# Optimize for size (important for WASM)
opt-level = "s"
# Link Time Optimization for smaller binaries
lto = true
# Single codegen unit for better optimization
codegen-units = 1
# Abort on panic (smaller WASM binaries)
panic = "abort"
# Strip debug symbols in release
strip = true

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt to avoid bulk memory issues
wasm-opt = false

[profile.dev]
# Keep debug info for better WASM debugging
debug = true
# Don't optimize in debug for faster builds
opt-level = 0

