[package]
name = "rust_logic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"

[dev-dependencies]

[target.'wasm32-unknown-unknown'.dependencies]
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]

